--- a/src/Components/Goal.module.css
+++ b/src/Components/Goal.module.css
@@ -39,7 +39,7 @@ button {
     border-color: rgba(255, 255, 255, 0);
 }
 
-form {
+.addTaskForm {
     width: 90%;
     position: relative;
     left: 10%;
