--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,7 @@ body {
   flex: 1;
   flex-wrap: wrap;
   justify-content: space-evenly;
+  justify-items: flex-start;
   padding-bottom: 4rem;
 }
 
